[gd_scene load_steps=4 format=3 uid="uid://clutabdohpa7a"]

[ext_resource type="Script" path="res://modules/stage/scene_builder.gd" id="1_dj2iq"]
[ext_resource type="PackedScene" uid="uid://t8203lyehn64" path="res://lib/map.tscn" id="2_7boav"]
[ext_resource type="PackedScene" uid="uid://dk046gnwuaxay" path="res://lib/path_browser.tscn" id="3_sk6tu"]

[node name="SceneBuilder" type="Node2D"]
script = ExtResource("1_dj2iq")

[node name="Scenes" type="Node2D" parent="."]

[node name="Builder" type="Window" parent="."]
initial_position = 1
title = "Scene Builder"
size = Vector2i(770, 400)
visible = false
unresizable = true

[node name="Map" parent="Builder" instance=ExtResource("2_7boav")]

[node name="BuilderEnable" type="CheckButton" parent="Builder"]
offset_top = 392.0
offset_right = 112.0
offset_bottom = 432.0
button_pressed = true
text = "Builder"

[node name="ResBrowser" parent="Builder" instance=ExtResource("3_sk6tu")]
position = Vector2(336, 0)

[connection signal="close_requested" from="Builder" to="." method="_on_builder_close_requested"]
[connection signal="visibility_changed" from="Builder" to="." method="_on_builder_visibility_changed"]
[connection signal="hook" from="Builder/Map" to="." method="_on_map_hook"]
[connection signal="toggled" from="Builder/BuilderEnable" to="." method="_on_builder_enable_toggled"]
[connection signal="hook" from="Builder/ResBrowser" to="." method="_on_res_browser_hook"]
